fixed carousel alignment issue

--- a/web/src/components/layout/layout.css
+++ b/web/src/components/layout/layout.css
@@ -8,6 +8,7 @@
     justify-content:space-between;
     flex-flow:row nowrap;
     padding:0 20px;
+   box-shadow: 3px 1px 7px 0px black;
 }
 
 .logo-container, .nav-container{
